<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/demo_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvIntro"
            style="@style/DemoBodyText" />

        <Button
            android:id="@+id/btnChangeTitle"
            style="@style/DemoActionButton"
            android:text="@string/demo_change_title" />

        <Button
            android:id="@+id/btnRightText"
            style="@style/DemoActionButton"
            android:text="@string/demo_change_right_text" />

        <Button
            android:id="@+id/btnLeftText"
            style="@style/DemoActionButton"
            android:text="@string/demo_change_left_text" />
    </LinearLayout>
</ScrollView>
